# LibDumper

./: .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/workflows/: build.yml  clear-caches.yml
app/: build.gradle.kts  proguard-dictionary.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/neomods/libdumper/: LibDumperApp.kt  MainActivity.kt
app/src/main/java/com/neomods/libdumper/crash/: CrashActivity.kt  CrashHandler.kt
app/src/main/java/com/neomods/libdumper/di/: AppModule.kt
app/src/main/java/com/neomods/libdumper/domain/: Models.kt
app/src/main/java/com/neomods/libdumper/jni/: NativeLibWrapper.kt
app/src/main/java/com/neomods/libdumper/storage/: SettingsManager.kt
app/src/main/java/com/neomods/libdumper/utils/: FileUtils.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
rust/: Cargo.toml
rust/src/: class_reconstructor.rs  demangler.rs  dump_pipeline.rs  elf_parser.rs  jni_bridge.rs  json_exporter.rs  lib.rs  namespace_detector.rs  symbol_extractor.rs  types.rs
(+13 files in other folders)
