[package]
name = "neolib_dumper"
version = "3.0.0"
edition = "2021"
authors = ["Lib Dumper Developer"]
description = "Native ELF analysis and symbol dumping backend for Lib Dumper"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "NeoLibDumper"

[dependencies]
goblin = "0.8"
cpp_demangle = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
jni = "0.21"
thiserror = "1.0"
log = "0.4"
lazy_static = "1.4"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
